added banner section with right-ligned image and left-aligned title & paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,17 @@
      max-width: 1280px;
      margin: auto;
 }
-header{
-     background-color: aquamarine;
-     
+.com_p{
+     color:rgba(0, 0, 0, 0.5) ;
+     font-weight: 400;
+     font-size: 22px;
 }
-
+header{
+     background: lightcoral; 
+}
+.hide{
+     display: none;
+}
 /* nav section */
 .header_section{
      margin-top: 30px;
@@ -36,6 +42,8 @@ header{
      display: flex;
      justify-content: space-between;
      align-items: center;
+     width:  100%;
+
 }
 #home{
      font-weight: bold;
@@ -45,14 +53,115 @@ header{
 }
 /* Banner section */
 
+.banner_container{
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     margin-top: 120px;
+     padding: 6px;
+     background-color: lightblue;
+     width:  100%;
+}
+.baner_title{
+     font-weight: bold;
+     font-size: 65px;
+}
+.banner_color{
+     color: rgb(233, 90, 8);
+}
+.banner_left{
+     margin-top: 94px;
+}
+
+/* plants section */
+.plants_container{
+     text-align: center;
+     margin-top: 100px;
+     background: lightgreen;
+}
+.plants_title{
+     font-size:50px ;
+     font-weight: bold;
+}
+.plants_description{
+     width: 888px;
+     margin: auto;
+     text-align: center;
+}
+/* card section */
+.card_container{
+     
+}
+.card_title{
+     font-size: 22px;
+     font-weight: 500;
+}
+.card_price{
+     font-size:22px ;
+     font-weight: bold;
+}
 
 
-@media screen and (max-width:576px) {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* @media screen and (max-width:576px) {
   .home,.shop,.about{
      display: none;
   }
-  .nav{
-     flex-direction: row;
-     /* flex-wrap: wrap; */
-  }
-} 
+ .banner_container{
+     flex-direction: column-reverse;   
+     /* justify-content: center; 
+     margin: auto;  */
+ /* }
+ .banner_left{
+     max-width: 361px;
+ }
+.banner_container img {
+     max-width: 100%;
+}
+ 
+}  */ */
